--- a/codes/options/train.yml
+++ b/codes/options/train.yml
@@ -1,5 +1,5 @@
 #### general settings
-name: Corrupted_noise
+name: DRB_SR
 use_tb_logger: true
 model: DRB
 distortion: sr
@@ -13,8 +13,8 @@ datasets:
     mode: DRB
     aug: ~ #noise
     noise_data: ../datasets/DF2K/Corrupted_noise/
-    dataroot_GT: D:/REDS/train_sharp # ../datasets/DF2K/generated/tdsr/HR
-    dataroot_LR: D:/REDS/train_sharp_bicubic/X4 # ../datasets/DF2K/generated/tdsr/LR
+    dataroot_GT: C:/Users/wee/Pytorch_Projects/Proposed/dataset/train/GT # D:/REDS/train_sharp # ../datasets/DF2K/generated/tdsr/HR
+    dataroot_LR: C:/Users/wee/Pytorch_Projects/Proposed/dataset/X4 #D:/REDS/train_sharp_bicubic/X4 # ../datasets/DF2K/generated/tdsr/LR
     use_shuffle: true
     n_workers: 6  # per GPU
     batch_size: 16
@@ -25,11 +25,14 @@ datasets:
     data_type: seq
     position: mid # side_1st // side 2nd // mid
     ref_frame_num: 5 # 3 / 5 / 7 ...
-#  val:
-#    name: val
-#    mode: LQGT
-#    dataroot_GT: ../../../ntire20/DIV2K_valid_HR
-#    dataroot_LQ: ../../../ntire20/Corrupted-va-x
+  val:
+    name: val
+    mode: DRB
+    dataroot_GT: C:/Users/wee/Pytorch_Projects/Proposed/dataset/val/GT # D:/REDS/val_sharp #../../../ntire20/DIV2K_valid_HR
+    dataroot_LR: C:/Users/wee/Pytorch_Projects/Proposed/dataset/val/X4 # D:/REDS/val_sharp_bicubic/X4 # ../../../ntire20/Corrupted-va-x
+    data_type: seq
+    position: mid # side_1st // side 2nd // mid
+    ref_frame_num: 5 # 3 / 5 / 7 ...
 
 #### network structures
 network_G:
@@ -51,7 +54,7 @@ path:
   pretrain_model_DRB: ~
   pretrain_model_Flow: ../pretrained_model/gma-sintel.pth
   strict_load: true
-  resume_state: ~
+  resume_state: ../experiments/DRB_SR/training_state/60000.state
 
 #### training settings: learning rate scheme, loss
 train:
@@ -71,9 +74,9 @@ train:
 
   lr_scheme: MultiStepLR
 
-  niter: 60001
+  niter: 600001
   warmup_iter: -1  # no warm up
-  lr_steps: [5000, 10000, 20000, 30000]
+  lr_steps: [50000, 100000, 200000, 300000]
   lr_gamma: 0.5
 
   pixel_criterion: l1
@@ -90,6 +93,7 @@ train:
   val_freq: !!float 5e3
 
 #### logger
+## tensorboard --logdir ./tb_logger --port=6006
 logger:
   print_freq: 100
   save_checkpoint_freq: !!float 5e3
