--- a/codes/options/train.yml
+++ b/codes/options/train.yml
@@ -1,26 +1,26 @@
 #### general settings
-name: DRB_SR_6e5
+name: DRB_SR
 use_tb_logger: true
 model: DRB
 distortion: sr
 scale: 4
-gpu_ids: [0,1]
+gpu_ids: [4]
 
 #### datasets
 datasets:
   train:
     name: train
-    mode: DRB
+    mode: DRB_no_patch
     aug: ~ #noise
     noise_data: ../datasets/DF2K/Corrupted_noise/
-    dataroot_GT: ../../../datasets/REDS_sep/train_sharp/ # ../datasets/DF2K/generated/tdsr/HR
-    dataroot_LR: ../../../datasets/REDS_sep/train_sharp_bicubic/X4/ # ../datasets/DF2K/generated/tdsr/LR
+    dataroot_GT: C:/Users/wee/Pytorch_Projects/Proposed/dataset/train/GT # D:/REDS/train_sharp # ../datasets/DF2K/generated/tdsr/HR
+    dataroot_LR: C:/Users/wee/Pytorch_Projects/Proposed/dataset/X4 #D:/REDS/train_sharp_bicubic/X4 # ../datasets/DF2K/generated/tdsr/LR
     use_shuffle: true
     n_workers: 0  # per GPU
-    batch_size: 8
+    batch_size: 2
     GT_size: 256
     use_flip: true
-    use_rot: true
+    use_rot: false
     color: RGB
     data_type: seq
     position: mid # side_1st // side 2nd // mid
@@ -28,8 +28,8 @@ datasets:
   val:
     name: val
     mode: DRB
-    dataroot_GT: ../../../datasets/REDS_sep/val_sharp/ #../../../ntire20/DIV2K_valid_HR
-    dataroot_LR: ../../../datasets/REDS_sep/val_sharp_bicubic/X4/ # ../../../ntire20/Corrupted-va-x
+    dataroot_GT: C:/Users/wee/Pytorch_Projects/Proposed/dataset/val/GT # D:/REDS/val_sharp #../../../ntire20/DIV2K_valid_HR
+    dataroot_LR: C:/Users/wee/Pytorch_Projects/Proposed/dataset/val/X4 # D:/REDS/val_sharp_bicubic/X4 # ../../../ntire20/Corrupted-va-x
     data_type: seq
     position: mid # side_1st // side 2nd // mid
     ref_frame_num: 5 # 3 / 5 / 7 ...
@@ -54,7 +54,7 @@ path:
   pretrain_model_DRB: ~
   pretrain_model_Flow: ../pretrained_model/gma-sintel.pth
   strict_load: true
-  resume_state: ~
+  resume_state: ../experiments/DRB_SR/training_state/60000.state
 
 #### training settings: learning rate scheme, loss
 train:
@@ -67,7 +67,7 @@ train:
   beta1_D: 0.9
   beta2_D: 0.999
 
-  lr_DRB: !!float 1e-5
+  lr_DRB: !!float 1e-4
   weight_decay_DRB: 0
   beta1_DRB: 0.9
   beta2_DRB: 0.999
@@ -93,6 +93,7 @@ train:
   val_freq: !!float 5e3
 
 #### logger
+## tensorboard --logdir ./tb_logger --port=6006
 logger:
   print_freq: 100
   save_checkpoint_freq: !!float 5e3
