--- a/codes/options/train.yml
+++ b/codes/options/train.yml
@@ -10,14 +10,14 @@ gpu_ids: [0]
 datasets:
   train:
     name: train
-    mode: DRB_no_patch
+    mode: DRB_no_patch  # DRB
     aug: ~ #noise
     noise_data: ../datasets/DF2K/Corrupted_noise/
-    dataroot_GT: C:/Users/wee/Pytorch_Projects/Proposed/dataset/train/GT # D:/REDS/train_sharp # ../datasets/DF2K/generated/tdsr/HR
-    dataroot_LR: C:/Users/wee/Pytorch_Projects/Proposed/dataset/train/X4 #D:/REDS/train_sharp_bicubic/X4 # ../datasets/DF2K/generated/tdsr/LR
+    dataroot_GT: D:/REDS/train_sharp # ../datasets/DF2K/generated/tdsr/HR  # D:/REDS/sintel_GT
+    dataroot_LR: D:/REDS/train_sharp_bicubic/X4 # ../datasets/DF2K/generated/tdsr/LR  # D:/REDS/sintel_LR
     use_shuffle: true
     n_workers: 0  # per GPU
-    batch_size: 16
+    batch_size: 1
     GT_size: 256
     use_flip: true
     use_rot: false
@@ -28,8 +28,8 @@ datasets:
   val:
     name: val
     mode: DRB
-    dataroot_GT: C:/Users/wee/Pytorch_Projects/Proposed/dataset/val/GT # D:/REDS/val_sharp #../../../ntire20/DIV2K_valid_HR
-    dataroot_LR: C:/Users/wee/Pytorch_Projects/Proposed/dataset/val/X4 # D:/REDS/val_sharp_bicubic/X4 # ../../../ntire20/Corrupted-va-x
+    dataroot_GT: D:/REDS/val_sharp # D:/REDS/val_sharp #../../../ntire20/DIV2K_valid_HR
+    dataroot_LR: D:/REDS/val_sharp_bicubic/X4 # D:/REDS/val_sharp_bicubic/X4 # ../../../ntire20/Corrupted-va-x
     data_type: seq
     position: mid # side_1st // side 2nd // mid
     ref_frame_num: 5 # 3 / 5 / 7 ...
