--- a/codes/options/train.yml
+++ b/codes/options/train.yml
@@ -1,5 +1,5 @@
 #### general settings
-name: DRB_SR_new1
+name: DRB_SR_new2
 use_tb_logger: true
 model: DRB
 distortion: sr
@@ -13,8 +13,8 @@ datasets:
     mode: DRB_no_patch
     aug: ~ #noise
     noise_data: ../datasets/DF2K/Corrupted_noise/
-    dataroot_GT: ../../../datasets/REDS_sep/train_sharp/ # ../datasets/DF2K/generated/tdsr/HR
-    dataroot_LR: ../../../datasets/REDS_sep/train_sharp_bicubic/X4/ # ../datasets/DF2K/generated/tdsr/LR
+    dataroot_GT: ../../../datasets/REDS_jpg/train_sharp/ # ../datasets/DF2K/generated/tdsr/HR
+    dataroot_LR: ../../../datasets/REDS_jpg/train_sharp_bicubic/X4/ # ../datasets/DF2K/generated/tdsr/LR
     use_shuffle: true
     n_workers: 0  # per GPU
     batch_size: 1
@@ -28,8 +28,8 @@ datasets:
   val:
     name: val
     mode: DRB
-    dataroot_GT: ../../../datasets/REDS_sep/val_sharp/ #../../../ntire20/DIV2K_valid_HR
-    dataroot_LR: ../../../datasets/REDS_sep/val_sharp_bicubic/X4/ # ../../../ntire20/Corrupted-va-x
+    dataroot_GT: ../../../datasets/REDS_jpg/val_sharp/ #../../../ntire20/DIV2K_valid_HR
+    dataroot_LR: ../../../datasets/REDS_jpg/val_sharp_bicubic/X4/ # ../../../ntire20/Corrupted-va-x
     data_type: seq
     position: mid # side_1st // side 2nd // mid
     ref_frame_num: 5 # 3 / 5 / 7 ...
@@ -51,10 +51,9 @@ network_DRB:
 #### path
 path:
   pretrain_model_G: ../pretrained_model/RRDB_PSNR_x4.pth
-  pretrain_model_DRB: ~
-  pretrain_model_Flow: ../pretrained_model/gma-sintel.pth
+  pretrain_model_DRB: ../experiments/DRB_SR_new2/models/80000_G.pth
   strict_load: true
-  resume_state: ~
+  resume_state: ../experiments/DRB_SR_new2/training_state/80000.state
 
 #### training settings: learning rate scheme, loss
 train:
@@ -96,7 +95,7 @@ train:
 ## tensorboard --logdir ./tb_logger --port=6006
 logger:
   print_freq: 100
-  save_checkpoint_freq: !!float 5e3
+  save_checkpoint_freq: !!float 1e4
 
 
 # server ssh
