--- a/codes/options/train.yml
+++ b/codes/options/train.yml
@@ -1,5 +1,5 @@
 #### general settings
-name: DRB_SR
+name: DRB_SR_lrDRB_1e-5_pixelShuffle_cri_fea
 use_tb_logger: true
 model: DRB
 distortion: sr
@@ -20,7 +20,7 @@ datasets:
     batch_size: 1
     GT_size: 256
     use_flip: true
-    use_rot: false
+    use_rot: true
     color: RGB
     data_type: seq
     position: mid # side_1st // side 2nd // mid
@@ -41,10 +41,12 @@ network_G:
   out_nc: 3
   nf: 64
   nb: 23
+
 network_D:
   which_model_D: discriminator_vgg_128
   in_nc: 3
   nf: 64
+
 network_DRB:
   which_model_DRB: DRB_mid # DRB_1st // DRB_2nd
 
@@ -61,24 +63,37 @@ train:
   weight_decay_G: 0
   beta1_G: 0.9
   beta2_G: 0.999
+
   lr_D: !!float 1e-4
   weight_decay_D: 0
   beta1_D: 0.9
   beta2_D: 0.999
 
-  lr_DRB: !!float 1e-4
-  weight_decay_DRB: !!float 1e-5  # 0
+  lr_DRB: !!float 1e-5
+  weight_decay_DRB: 0
   beta1_DRB: 0.9
   beta2_DRB: 0.999
 
-  lr_scheme: MultiStepLR
-
   niter: 600001
   warmup_iter: -1  # no warm up
-  lr_steps: [50000, 100000, 200000, 300000]
+
+#  # MultiStepLR_Restart
+#  lr_scheme: MultiStepLR_Restart
+#  lr_steps: [50000, 100000, 200000, 300000]
+#  restarts: [250000, 500000, 750000]
+#  restart_weights: [1, 1, 1]
+
+#  # CosineAnnealingLR_Restart
+  lr_scheme: CosineAnnealingLR_Restart
+  # four
+  T_period: [150000, 150000, 150000, 150000]
+  restarts: [150000, 300000, 450000]
+  restart_weights: [1, 1, 1]
+  eta_min: 0
+
   lr_gamma: 0.5
 
-  pixel_criterion: cb
+  pixel_criterion: cb   # l1
   pixel_weight: !!float 1e-2  # 1
   feature_criterion: l1
   feature_weight: 1
