--- a/codes/options/train.yml
+++ b/codes/options/train.yml
@@ -1,16 +1,16 @@
 #### general settings
-name: DRB_SR_new2
+name: DRB_SR_lrDRB_1e-5_pixelShuffle_cri_fea
 use_tb_logger: true
 model: DRB
 distortion: sr
 scale: 4
-gpu_ids: [0,1]
+gpu_ids: [0]
 
 #### datasets
 datasets:
   train:
     name: train
-    mode: DRB_no_patch
+    mode: DRB_no_patch  # DRB
     aug: ~ #noise
     noise_data: ../datasets/DF2K/Corrupted_noise/
     dataroot_GT: ../../../datasets/REDS_jpg/train_sharp/ # ../datasets/DF2K/generated/tdsr/HR
@@ -41,10 +41,12 @@ network_G:
   out_nc: 3
   nf: 64
   nb: 23
+
 network_D:
   which_model_D: discriminator_vgg_128
   in_nc: 3
   nf: 64
+
 network_DRB:
   which_model_DRB: DRB_mid # DRB_1st // DRB_2nd
 
@@ -61,6 +63,7 @@ train:
   weight_decay_G: 0
   beta1_G: 0.9
   beta2_G: 0.999
+
   lr_D: !!float 1e-4
   weight_decay_D: 0
   beta1_D: 0.9
@@ -71,17 +74,29 @@ train:
   beta1_DRB: 0.9
   beta2_DRB: 0.999
 
-  lr_scheme: MultiStepLR
-
   niter: 600001
   warmup_iter: -1  # no warm up
-  lr_steps: [50000, 100000, 200000, 300000]
+
+  #  # MultiStepLR_Restart
+  #  lr_scheme: MultiStepLR_Restart
+  #  lr_steps: [50000, 100000, 200000, 300000]
+  #  restarts: [250000, 500000, 750000]
+  #  restart_weights: [1, 1, 1]
+
+  #  # CosineAnnealingLR_Restart
+  lr_scheme: CosineAnnealingLR_Restart
+  # four
+  T_period: [ 150000, 150000, 150000, 150000 ]
+  restarts: [ 150000, 300000, 450000 ]
+  restart_weights: [ 1, 1, 1 ]
+  eta_min: 0
+
   lr_gamma: 0.5
 
-  pixel_criterion: cb
+  pixel_criterion: cb   # l1
   pixel_weight: !!float 1e-2  # 1
   feature_criterion: l1
-  feature_weight: 1
+  feature_weight: !!float 1e-2
   gan_type: ragan  # gan | ragan
   gan_weight: !!float 5e-3
 
@@ -89,13 +104,13 @@ train:
   D_init_iters: 0
 
   manual_seed: 10
-  val_freq: !!float 5e3
+  val_freq: !!float 1e4
 
 #### logger
 ## tensorboard --logdir ./tb_logger --port=6006
 logger:
   print_freq: 100
-  save_checkpoint_freq: !!float 1e4
+  save_checkpoint_freq: !!float 5e3
 
 
 # server ssh
