--- a/codes/options/train.yml
+++ b/codes/options/train.yml
@@ -1,5 +1,5 @@
 #### general settings
-name: DRB_SR_lrDRB_1e-5_pixelShuffle_cri_fea
+name: DRB_SR_lrDRB_1e-4_pixelShuffle_cri_fea
 use_tb_logger: true
 model: DRB
 distortion: sr
@@ -69,7 +69,7 @@ train:
   beta1_D: 0.9
   beta2_D: 0.999
 
-  lr_DRB: !!float 1e-5
+  lr_DRB: !!float 1e-4
   weight_decay_DRB: 0
   beta1_DRB: 0.9
   beta2_DRB: 0.999
@@ -86,9 +86,12 @@ train:
 #  # CosineAnnealingLR_Restart
   lr_scheme: CosineAnnealingLR_Restart
   # four
-  T_period: [150000, 150000, 150000, 150000]
-  restarts: [150000, 300000, 450000]
-  restart_weights: [1, 1, 1]
+#  T_period: [150000, 150000, 150000, 150000]
+#  restarts: [150000, 300000, 450000]
+#  restart_weights: [1, 1, 1]
+  T_period: [ 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000 ]
+  restarts: [ 30000, 60000, 90000, 120000, 150000, 180000, 210000, 240000, 270000 ]
+  restart_weights: [ 1, 1, 1, 1, 1, 1, 1, 1, 1 ]
   eta_min: 0
 
   lr_gamma: 0.5
@@ -96,7 +99,7 @@ train:
   pixel_criterion: cb   # l1
   pixel_weight: !!float 1e-2  # 1
   feature_criterion: l1
-  feature_weight: 1
+  feature_weight: !!float 1e-1  # 1
   gan_type: ragan  # gan | ragan
   gan_weight: !!float 5e-3
 
