--- a/codes/options/train2.yml
+++ b/codes/options/train2.yml
@@ -1,10 +1,10 @@
 #### general settings
-name: DRB_SR_lrDRB_1e-4_pixelShuffle_pix_l1_cri_fea_l1_TP40000_x10
+name: DRB_SR_lrDRB_1e-4_pixelShuffle_cri_fea_TP30000_x10
 use_tb_logger: true
 model: DRB
 distortion: sr
 scale: 4
-gpu_ids: [0]
+gpu_ids: [1]
 
 #### datasets
 datasets:
@@ -86,14 +86,14 @@ train:
   #  # CosineAnnealingLR_Restart
   lr_scheme: CosineAnnealingLR_Restart
   # four
-  T_period: [ 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000 ]
-  restarts: [ 40000, 80000, 120000, 160000, 200000, 240000, 280000, 320000, 360000 ]
+  T_period: [ 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000 ]
+  restarts: [ 30000, 60000, 90000, 120000, 150000, 180000, 210000, 240000, 270000 ]
   restart_weights: [ 1, 1, 1, 1, 1, 1, 1, 1, 1 ]
   eta_min: 0
 
   lr_gamma: 0.5
 
-  pixel_criterion: l1   # l1
+  pixel_criterion: cb   # l1
   pixel_weight: !!float 1e-2  # 1
   feature_criterion: l1
   feature_weight: !!float 1e-2
