--- a/codes/options/train.yml
+++ b/codes/options/train.yml
@@ -1,5 +1,5 @@
 #### general settings
-name: DRB_SR_lrDRB_1e-4_pixelShuffle_pix_l1_cri_fea_l1_TP40000_x10
+name: DRB_SR_block_n_1_lrDRB_1e-4_pixelShuffle_pix_l1_1_cri_fea_l1_1_TP40000_x10
 use_tb_logger: true
 model: DRB
 distortion: sr
@@ -94,9 +94,9 @@ train:
   lr_gamma: 0.5
 
   pixel_criterion: l1   # l1
-  pixel_weight: !!float 1e-2  # 1
+  pixel_weight: 1 # !!float 1e-1  # 1
   feature_criterion: l1
-  feature_weight: !!float 1e-2
+  feature_weight: 1 # !!float 1e-1
   gan_type: ragan  # gan | ragan
   gan_weight: !!float 5e-3
 
