--- a/codes/options/train.yml
+++ b/codes/options/train.yml
@@ -1,5 +1,6 @@
 #### general settings
-name: DRB_SR_lrDRB_1e-4_pixelShuffle_cri_fea
+name: DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_l1_1_TP150000_x4
+
 use_tb_logger: true
 model: DRB
 distortion: sr
@@ -86,12 +87,12 @@ train:
 #  # CosineAnnealingLR_Restart
   lr_scheme: CosineAnnealingLR_Restart
   # four
-#  T_period: [150000, 150000, 150000, 150000]
-#  restarts: [150000, 300000, 450000]
-#  restart_weights: [1, 1, 1]
-  T_period: [ 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000 ]
-  restarts: [ 30000, 60000, 90000, 120000, 150000, 180000, 210000, 240000, 270000 ]
-  restart_weights: [ 1, 1, 1, 1, 1, 1, 1, 1, 1 ]
+  T_period: [150000, 150000, 150000, 150000]
+  restarts: [150000, 300000, 450000]
+  restart_weights: [1, 1, 1]
+#  T_period: [ 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000 ]
+#  restarts: [ 30000, 60000, 90000, 120000, 150000, 180000, 210000, 240000, 270000 ]
+#  restart_weights: [ 1, 1, 1, 1, 1, 1, 1, 1, 1 ]
   eta_min: 0
 
   lr_gamma: 0.5
