--- a/codes/options/train2.yml
+++ b/codes/options/train2.yml
@@ -1,5 +1,5 @@
 #### general settings
-name: DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1e-2_cri_fea_cb_1e-2_TP30000_x10
+name: DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_l1_1e3_cri_fea_l1_1e2_TP40000_x10
 use_tb_logger: true
 model: DRB
 distortion: sr
@@ -53,9 +53,9 @@ network_DRB:
 #### path
 path:
   pretrain_model_G: ../pretrained_model/RRDB_PSNR_x4.pth
-  pretrain_model_DRB: ~ #../experiments/DRB_SR_new2/models/80000_G.pth
+  pretrain_model_DRB: ../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_l1_1e3_cri_fea_l1_1e2_TP40000_x10/models/10000_G.pth
   strict_load: true
-  resume_state: ~ #../experiments/DRB_SR_new2/training_state/80000.state
+  resume_state: ../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_l1_1e3_cri_fea_l1_1e2_TP40000_x10/training_state/10000.state
 
 #### training settings: learning rate scheme, loss
 train:
@@ -80,23 +80,23 @@ train:
   #  # MultiStepLR_Restart
   #  lr_scheme: MultiStepLR_Restart
   #  lr_steps: [50000, 100000, 200000, 300000]
-  #  restarts: [250000, 500000, 750000]
+  #  restarts: [50000, 150000, 350000]
   #  restart_weights: [1, 1, 1]
 
   #  # CosineAnnealingLR_Restart
   lr_scheme: CosineAnnealingLR_Restart
   # four
-  T_period: [ 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000, 30000 ]
-  restarts: [ 30000, 60000, 90000, 120000, 150000, 180000, 210000, 240000, 270000 ]
+  T_period: [ 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000 ]
+  restarts: [ 40000, 80000, 120000, 160000, 200000, 240000, 280000, 320000, 360000 ]
   restart_weights: [ 1, 1, 1, 1, 1, 1, 1, 1, 1 ]
   eta_min: 0
 
   lr_gamma: 0.5
 
-  pixel_criterion: cb   # l1
-  pixel_weight: !!float 1e-2  # 1
-  feature_criterion: cb
-  feature_weight: !!float 1e-2
+  pixel_criterion: l1   # l1
+  pixel_weight: !!float 1e3  # 1
+  feature_criterion: l1
+  feature_weight: !!float 1e2
   gan_type: ragan  # gan | ragan
   gan_weight: !!float 5e-3
 
@@ -121,5 +121,6 @@ logger:
 
 # server tensor board
 # PC: ssh -L 16006:localhost:6006 icsp@166.104.36.34
+# server: conda activate Proposed
 # server: tensorboard --logdir sda/VSR/Proposed/tb_logger
 
