--- a/codes/options/train.yml
+++ b/codes/options/train.yml
@@ -1,5 +1,5 @@
 #### general settings
-name: DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_l1_1e1_TP40000_x10
+name: DRB_SR_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1e-2_cri_fea_l1_1e-1_TP150000_x4
 use_tb_logger: true
 model: DRB
 distortion: sr
@@ -53,9 +53,9 @@ network_DRB:
 #### path
 path:
   pretrain_model_G: ../pretrained_model/RRDB_PSNR_x4.pth
-  pretrain_model_DRB: ../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_l1_1e1_TP40000_x10/models/30000_G.pth
+  pretrain_model_DRB: ~ #../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_l1_1e1_TP40000_x10/models/30000_G.pth
   strict_load: true
-  resume_state: ../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_l1_1e1_TP40000_x10/training_state/30000.state
+  resume_state: ~ #../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_l1_1e1_TP40000_x10/training_state/30000.state
 
 #### training settings: learning rate scheme, loss
 train:
@@ -86,17 +86,19 @@ train:
   #  # CosineAnnealingLR_Restart
   lr_scheme: CosineAnnealingLR_Restart
   # four
-  T_period: [ 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000 ]
-  restarts: [ 40000, 80000, 120000, 160000, 200000, 240000, 280000, 320000, 360000 ]
-  restart_weights: [ 1, 1, 1, 1, 1, 1, 1, 1, 1 ]
+  T_period: [150000, 150000, 150000, 150000]
+  restarts: [150000, 300000, 450000]
+  restart_weights: [1, 1, 1]
   eta_min: 0
 
   lr_gamma: 0.5
 
   pixel_criterion: cb   # l1
-  pixel_weight: !!float 1e-3  # 1
+  pixel_weight: !!float 1e-2  # 1
+
   feature_criterion: l1
-  feature_weight: !!float 1e1
+  feature_weight: !!float 1e-1
+
   gan_type: ragan  # gan | ragan
   gan_weight: !!float 5e-3
 
