--- a/codes/options/train3.yml
+++ b/codes/options/train3.yml
@@ -1,7 +1,7 @@
 #### general settings
-name: DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP40000_x10
+name: DRB_SR_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP40000_x10
 use_tb_logger: true
-model: DRB
+model: DRB_nowarp
 distortion: sr
 scale: 4
 gpu_ids: [0]
@@ -53,9 +53,9 @@ network_DRB:
 #### path
 path:
   pretrain_model_G: ../pretrained_model/RRDB_PSNR_x4.pth
-  pretrain_model_DRB: ../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP40000_x10/models/55000_G.pth
+  pretrain_model_DRB: ~ #../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP40000_x10/models/55000_G.pth
   strict_load: true
-  resume_state: ../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP40000_x10/training_state/55000.state
+  resume_state: ~ #../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP40000_x10/training_state/55000.state
 
 #### training settings: learning rate scheme, loss
 train:
