--- a/codes/options/train3.yml
+++ b/codes/options/train3.yml
@@ -1,5 +1,5 @@
 #### general settings
-name: DRB_SR_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP40000_x10
+name: DRB_SR_NEW_block_n_4_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP150000_x4
 use_tb_logger: true
 model: DRB_nowarp
 distortion: sr
@@ -53,9 +53,9 @@ network_DRB:
 #### path
 path:
   pretrain_model_G: ../pretrained_model/RRDB_PSNR_x4.pth
-  pretrain_model_DRB: ~ #../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP40000_x10/models/55000_G.pth
+  pretrain_model_DRB: ~ #../experiments/DRB_SR_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP150000_x4/models/35000_G.pth
   strict_load: true
-  resume_state: ~ #../experiments/DRB_SR_block_n_3_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP40000_x10/training_state/55000.state
+  resume_state: ~ #../experiments/DRB_SR_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP150000_x4/training_state/35000.state
 
 #### training settings: learning rate scheme, loss
 train:
@@ -86,9 +86,10 @@ train:
   #  # CosineAnnealingLR_Restart
   lr_scheme: CosineAnnealingLR_Restart
   # four
-  T_period: [ 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000 ]
-  restarts: [ 40000, 80000, 120000, 160000, 200000, 240000, 280000, 320000, 360000 ]
-  restart_weights: [ 1, 1, 1, 1, 1, 1, 1, 1, 1 ]
+  T_period: [150000, 150000, 150000, 150000]
+  restarts: [150000, 300000, 450000]
+  restart_weights: [1, 1, 1]
+  eta_min: 0
   eta_min: 0
 
   lr_gamma: 0.5
