--- a/codes/options/train4.yml
+++ b/codes/options/train4.yml
@@ -10,14 +10,14 @@ gpu_ids: [1]
 datasets:
   train:
     name: train
-    mode: DRB_no_patch  # DRB
+    mode: DRB # DRB / DRB_no_patch
     aug: ~ #noise
     noise_data: ../datasets/DF2K/Corrupted_noise/
     dataroot_GT: ../../../datasets/REDS_jpg/train_sharp/ # ../datasets/DF2K/generated/tdsr/HR
     dataroot_LR: ../../../datasets/REDS_jpg/train_sharp_bicubic/X4/ # ../datasets/DF2K/generated/tdsr/LR
     use_shuffle: true
     n_workers: 0  # per GPU
-    batch_size: 1
+    batch_size: 8
     GT_size: 256
     use_flip: true
     use_rot: true
