--- a/codes/options/train4.yml
+++ b/codes/options/train4.yml
@@ -1,5 +1,5 @@
 #### general settings
-name: DRB_SR_NEW_block_n_4_lrDRB_1e-4_pixelShuffle_pix_cb_1e-2_cri_fea_cb_1e-3_TP150000_x4
+name: DRB_SR_GT_256_block_n_4_lrDRB_1e-4_pixelShuffle_pix_l1_1_cri_fea_l1_1e-1_TP150000_x4
 use_tb_logger: true
 model: DRB_nowarp
 distortion: sr
@@ -94,10 +94,10 @@ train:
 
   lr_gamma: 0.5
 
-  pixel_criterion: cb   # l1 / cb
-  pixel_weight: !!float 1e-2 # !!float 1e-2
-  feature_criterion: cb # l1 / cb
-  feature_weight: !!float 1e-3
+  pixel_criterion: l1   # l1 / cb
+  pixel_weight: 1 # !!float 1e-2
+  feature_criterion: l1 # l1 / cb
+  feature_weight: !!float 1e-1
   gan_type: ragan  # gan | ragan
   gan_weight: !!float 5e-3
 
