--- a/codes/options/train3.yml
+++ b/codes/options/train3.yml
@@ -1,5 +1,5 @@
 #### general settings
-name: DRB_SR_GT_256_block_n_4_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP150000_x4
+name: DRB_SR_GT_256_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_cb_1e-5_TP150000_x4
 use_tb_logger: true
 model: DRB_nowarp
 distortion: sr
@@ -53,9 +53,9 @@ network_DRB:
 #### path
 path:
   pretrain_model_G: ../pretrained_model/RRDB_PSNR_x4.pth
-  pretrain_model_DRB: ~ #../experiments/DRB_SR_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP150000_x4/models/35000_G.pth
+  pretrain_model_DRB: ../experiments/DRB_SR_GT_256_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_cb_1e-5_TP150000_x4/models/60000_G.pth
   strict_load: true
-  resume_state: ~ #../experiments/DRB_SR_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1_cri_fea_cb_1e-1_TP150000_x4/training_state/35000.state
+  resume_state: ../experiments/DRB_SR_GT_256_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_cb_1e-5_TP150000_x4/training_state/60000.state
 
 #### training settings: learning rate scheme, loss
 train:
@@ -95,9 +95,9 @@ train:
   lr_gamma: 0.5
 
   pixel_criterion: cb   # l1 / cb
-  pixel_weight: 1 # !!float 1e-2
+  pixel_weight: !!float 1e-3 # !!float 1e-2
   feature_criterion: cb # l1 / cb
-  feature_weight: !!float 1e-1
+  feature_weight: !!float 1e-5
   gan_type: ragan  # gan | ragan
   gan_weight: !!float 5e-3
 
@@ -122,5 +122,9 @@ logger:
 
 # server tensor board
 # PC: ssh -L 16006:localhost:6006 icsp@166.104.36.34
-# server: tensorboard --logdir sda/VSR/Proposed/tb_logger
+# server:
+#  conda activate Proposed
+#  tensorboard --logdir sda/VSR/Proposed/tb_logger
+#  cd sda/VSR/Proposed/codes
+
 
