--- a/codes/options/test_RCAN.yml
+++ b/codes/options/test_RCAN.yml
@@ -1,36 +1,26 @@
-name: RCAN
+#### general settings
+name: RCAN_test
 
-main_mode: VideoSR
-model: x4SR
+model: RCAN
 distortion: ~
 scale: 4
 gpu_ids: [ 0 ]
-position: ~  # mid / side_1st / side_2nd
 
 datasets:
   val_test:
     scale: 4
     name: RCAN
-    mode: LQGT
+    mode: RCAN  # dataset scale [0 1]
     data_type: img
-#    dataroot_GT: D:/REDS/val_sharp # D:/REDS/val_sharp #../../../ntire20/DIV2K_valid_HR
-#    dataroot_LQ: D:/REDS/val_sharp_bicubic/X4 # D:/REDS/val_sharp_bicubic/X4 # ../../../ntire20/Corrupted-va-x
-    dataroot_GT: D:\DIV2K\DIV2K_train_HR
-    dataroot_LQ: D:\DIV2K\DIV2K_train_LR_bicubic\X4
+    dataroot_GT: D:/REDS/val_sharp # D:/REDS/val_sharp #../../../ntire20/DIV2K_valid_HR
+    dataroot_LQ: D:/REDS/val_sharp_bicubic/X4 # D:/REDS/val_sharp_bicubic/X4 # ../../../ntire20/Corrupted-va-x
+#    dataroot_GT: D:\DIV2K\DIV2K_train_HR
+#    dataroot_LQ: D:\DIV2K\DIV2K_train_LR_bicubic\X4
 
 
 #### network structures
-network_SR:
-  which_model: ~   # DRBNet_mid / DRBNet_side_1st / DRBNet_side_2nd
-
-#### path
-path:
-  pretrain_model: ../pretrained_model/RCAN_BIX4.pt
-  strict_load: true
-  results_root: ../results
-
 network_RCAN:
-  which_model_RCAN: RCAN
+  which_model: RCAN
   n_resgroups: 10
   n_resblocks: 20
   n_feats: 64
@@ -42,5 +32,11 @@ network_RCAN:
   shift_mean: True
   precision: single
   gan_k: 1  # k value for adversarial loss
+
+#### path
+path:
+  pretrain_model: ../pretrained_model/120000_G.pth #../pretrained_model/RCAN_BIX4.pt
+  strict_load: true
+  results_root: ../results
 
 
