--- a/codes/options/train_RCAN.yml
+++ b/codes/options/train_RCAN.yml
@@ -12,8 +12,6 @@ datasets:
   train:
     name: train
     mode: RCAN  # DRB / DRB_no_patch / LQGT / RCAN
-    aug: ~ #noise
-    noise_data: ../datasets/DF2K/Corrupted_noise/
     dataroot_GT: D:/REDS/train_sharp # ../datasets/DF2K/generated/tdsr/HR  # D:/REDS/sintel_GT
     dataroot_LQ: D:/REDS/train_sharp_bicubic/X4 # ../datasets/DF2K/generated/tdsr/LR  # D:/REDS/sintel_LR
     use_shuffle: true
@@ -24,26 +22,14 @@ datasets:
     use_rot: true
     color: RGB
     data_type: img
-    position: mid # side_1st // side 2nd // mid
-    ref_frame_num: 5 # 3 / 5 / 7 ...
   val:
     name: val
-    mode: LQGT
+    mode: RCAN
     dataroot_GT: D:/REDS/val_sharp # D:/REDS/val_sharp #../../../ntire20/DIV2K_valid_HR
     dataroot_LQ: D:/REDS/val_sharp_bicubic/X4 # D:/REDS/val_sharp_bicubic/X4 # ../../../ntire20/Corrupted-va-x
     data_type: img
-    position: mid # side_1st // side 2nd // mid
-    ref_frame_num: 5 # 3 / 5 / 7 ...
 
 #### network structures
-network_G:
-  which_model_G: RRDBNet
-  in_nc: 3
-  out_nc: 3
-  nf: 64
-  nb: 23
-
-
 network_RCAN:
   which_model: RCAN
   n_resgroups: 10
@@ -51,7 +37,7 @@ network_RCAN:
   n_feats: 64
   reduction: 16
   scale: 4
-  rgb_range: 255
+  rgb_range: 1  # 255
   n_colors: 3
   res_scale: 1
   shift_mean: True
@@ -62,9 +48,9 @@ network_RCAN:
 
 #### path
 path:
-  pretrain_model: ../experiments/RCAN/models/30000_G.pth
+  pretrain_model: ../experiments/RCAN/models/120000_G.pth
   strict_load: true
-  resume_state: ../experiments/RCAN/training_state/30000.state
+  resume_state: ../experiments/RCAN/training_state/120000.state
 
 #### training settings: learning rate scheme, loss
 train:
@@ -87,7 +73,7 @@ train:
   D_init_iters: 0
 
   manual_seed: 1
-  val_freq: !!float 5e3
+  val_freq: !!float 1e4
 
 #### logger
 ## tensorboard --logdir ./tb_logger --port=6006
