--- a/codes/options/test_DBPN.yml
+++ b/codes/options/test_DBPN.yml
@@ -1,7 +1,7 @@
 #### general settings
-name: RCAN_test
+name: DBPN
 
-model: RCAN
+model: DBPN
 distortion: ~
 scale: 4
 gpu_ids: [ 0 ]
@@ -9,8 +9,8 @@ gpu_ids: [ 0 ]
 datasets:
   val_test:
     scale: 4
-    name: RCAN
-    mode: RCAN  # dataset scale [0 1]
+    name: DBPN
+    mode: DBPN
     data_type: img
     dataroot_GT: D:/REDS/val_sharp # D:/REDS/val_sharp #../../../ntire20/DIV2K_valid_HR
     dataroot_LQ: D:/REDS/val_sharp_bicubic/X4 # D:/REDS/val_sharp_bicubic/X4 # ../../../ntire20/Corrupted-va-x
@@ -19,24 +19,20 @@ datasets:
 
 
 #### network structures
-network_RCAN:
-  which_model: RCAN
-  n_resgroups: 10
-  n_resblocks: 20
-  n_feats: 64
-  reduction: 16
+network_DBPN:
+  which_model: DBPN
+  num_channels: 3
+  base_filter: 64
+  n_feats: 256
+  num_stages: 3
   scale: 4
   rgb_range: 255
-  n_colors: 3
-  res_scale: 1
-  shift_mean: True
-  precision: single
-  gan_k: 1  # k value for adversarial loss
+
 
 #### path
 path:
   root: H:/Proposed              # written at option.py
-  pretrain_model: ../pretrained_model/RCAN_REDS_300epoch.pth
+  pretrain_model: ../pretrained_model/DBPN-RES-MR64-3_4x.pth
   strict_load: true
   results_root: ../results
 
