--- a/codes/options/train3.yml
+++ b/codes/options/train3.yml
@@ -1,7 +1,7 @@
 #### general settings
-name: DRB_SR_GT_256_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_cb_1e-5_TP600000_x4
+name: DRB_net_GT_512_batch_4_block_n_4_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_cb_1e-5_TP600000_x4
 use_tb_logger: true
-model: DRB_nowarp
+model: DRB
 distortion: sr
 scale: 4
 gpu_ids: [0]
@@ -13,12 +13,12 @@ datasets:
     mode: DRB # DRB / DRB_no_patch
     aug: ~ #noise
     noise_data: ../datasets/DF2K/Corrupted_noise/
-    dataroot_GT: ../../../datasets/REDS_jpg/train_sharp/ # ../datasets/DF2K/generated/tdsr/HR
-    dataroot_LR: ../../../datasets/REDS_jpg/train_sharp_bicubic/X4/ # ../datasets/DF2K/generated/tdsr/LR
+    dataroot_GT: ../../REDS/train_sharp/ # ../datasets/DF2K/generated/tdsr/HR
+    dataroot_LR: ../../REDS/train_sharp_bicubic/X4/ # ../datasets/DF2K/generated/tdsr/LR
     use_shuffle: true
     n_workers: 0  # per GPU
-    batch_size: 8
-    GT_size: 256
+    batch_size: 4
+    GT_size: 512
     use_flip: true
     use_rot: true
     color: RGB
@@ -28,8 +28,8 @@ datasets:
   val:
     name: val
     mode: DRB
-    dataroot_GT: ../../../datasets/REDS_jpg/val_sharp/ #../../../ntire20/DIV2K_valid_HR
-    dataroot_LR: ../../../datasets/REDS_jpg/val_sharp_bicubic/X4/ # ../../../ntire20/Corrupted-va-x
+    dataroot_GT: ../../REDS/val_sharp/ #../../../ntire20/DIV2K_valid_HR
+    dataroot_LR: ../../REDS/val_sharp_bicubic/X4/ # ../../../ntire20/Corrupted-va-x
     data_type: seq
     position: mid # side_1st // side 2nd // mid
     ref_frame_num: 5 # 3 / 5 / 7 ...
@@ -48,14 +48,15 @@ network_D:
   nf: 64
 
 network_DRB:
-  which_model_DRB: DRB_mid # DRB_1st // DRB_2nd
+  which_model_DRB: DRB_no_unet # DRB_mid # DRB_1st // DRB_2nd
+  rgb_range: 1
 
 #### path
 path:
   pretrain_model_G: ../pretrained_model/RRDB_PSNR_x4.pth
-  pretrain_model_DRB: ~ #../experiments/DRB_SR_GT_256_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_cb_1e-5_TP150000_x4/models/60000_G.pth
+  pretrain_model_DRB: ~ #../experiments/DRB_net_GT_256_batch_8_block_n_4_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_cb_1e-5_TP600000_x4/models/25000_G.pth
   strict_load: true
-  resume_state: ~ #../experiments/DRB_SR_GT_256_block_n_1_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_cb_1e-5_TP150000_x4/training_state/60000.state
+  resume_state: ~ # ../experiments/DRB_net_GT_256_batch_8_block_n_4_lrDRB_1e-4_pixelShuffle_pix_cb_1e-3_cri_fea_cb_1e-5_TP600000_x4/training_state/25000.state
 
 #### training settings: learning rate scheme, loss
 train:
@@ -122,8 +123,8 @@ logger:
 # server tensor board
 # PC: ssh -L 16006:localhost:6006 icsp@166.104.36.34
 # server:
-#  conda activate Proposed
-#  tensorboard --logdir sda/VSR/Proposed/tb_logger
-#  cd sda/VSR/Proposed/codes
+#  conda activate Dissertation
+#  tensorboard --logdir nvme1/Dissertation/tb_logger
+#  cd nvme1/Dissertation/codes
 
 
